2024-03-15T11:19:11.878Z |           1.13.1 | fix
2024-03-15T13:44:10.101Z |           1.13.2 | fix
2024-03-17T20:39:20.603Z |           1.13.3 | fix
2024-03-18T10:33:35.665Z |           1.13.4 | fix
2024-03-19T20:39:35.187Z |           1.13.5 | fix
2024-03-20T11:31:17.293Z |           1.13.6 | relative date upd
2024-05-29T13:55:19.370Z |           1.14.0 | unescapeHTML func + upd eslint
2024-05-29T14:01:22.988Z |           1.14.1 | fix
2024-08-06T16:03:29.707Z |           1.14.2 | fix
2024-12-15T12:31:51.917Z |           1.15.0 | datesFromTo
2024-12-17T09:11:33.674Z |           1.15.1 | fix
2024-12-18T16:17:49.677Z |           1.15.2 | fix
2025-03-30T13:50:38.351Z |           1.15.3 | libs upd
2025-04-30T13:13:08.365Z |           1.15.4 | fix
2025-06-03T15:21:22.928Z |           1.15.5 | fix
2025-07-18T13:45:22.198Z |           1.16.0 | array to csv
2025-07-18T13:51:02.677Z |           1.16.1 | fix
2025-07-28T10:57:23.083Z |           1.17.0 | classnames & domBuilder
2025-07-28T12:27:09.065Z |           1.18.0 | parseText
2025-07-28T12:36:33.104Z |           1.18.1 | fix
2025-07-30T13:39:42.317Z |           1.19.0 | domBuilder: support for dom elements as content values
2025-09-25T08:42:53.002Z |           1.19.1 | fix
2025-09-30T07:42:47.470Z |           1.20.0 | DomBuilder: tags array
2025-10-06T16:07:04.467Z |           1.20.1 | Error message on incorrect domBuilder children element
2025-10-14T12:54:49.595Z |           1.21.0 | DomBuilder: tag as array with classnames
2025-12-05T13:39:03.779Z |           1.22.0 | stripTags, createId
2025-12-05T17:01:34.224Z |           1.23.0 | domBuilder: replaceParentChildren option
2025-12-07T17:47:17.765Z |           1.24.0 | domBuilder Upd
2025-12-09T08:37:39.795Z |           1.24.1 | fix
2025-12-09T09:25:29.014Z |           1.24.2 | fix
2025-12-09T11:42:14.878Z |           1.24.3 | domBuilder fix
2025-12-10T14:32:36.681Z |           1.24.4 | domBuilder fix