@@ -1,65 +1,0 @@
-<!DOCTYPE html>
-<html lang="it">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Dom-builder test</title>
-    <link rel="icon" href="data:;base64,=">
-    <style>
-      body {
-        font-family: sans-serif;
-      }
-      table {
-        border: 1px #666;
-        border-style: solid none none solid;
-        border-collapse: collapse;
-      }
-      th, td {
-        border: 1px #666;
-        border-style: none solid solid none;
-        padding: .5rem;
-      }
-      #test div {
-        margin: 1rem 0;
-        padding: 1rem;
-        border: 1px solid #999;
-      }
-
-    </style>
-  </head>
-  <body>
-    <h1>Dom builder test</h1>
-    <div id="test"></div>
-
-    <script type="module">
-      import { domBuilder } from '../src/dom-builder.js';
-      domBuilder([
-        {
-          tag: 'p',
-          content: 'domBuilder'
-        },
-        'p#test-id.test-class1.test-class2(data-xxx=ok, data-yyy: ok2) Lorem ipsum',
-        '.test-class3 dolor sit amet',
-        {
-          tag: 'table',
-          children: [
-            {
-              tag: ['thead', 'tr'],
-              children: ['col1', 'col2', 'col3', 'col4'].map(item => ({
-                tag: 'th',
-                content: item,
-                attrs: {scope: 'col'}
-              }))
-            },
-            {
-              tag: ['tbody', 'tr.tr-class'],
-              children: [1,2,3,4].map(item => ({tag: 'td', content: item}))
-            },
-          ]
-        },
-        '#id.classe1.classe2.classeN(attributo1: valore1, attributo2=valore2, attributo3) Lorem ipsum'
-      ], document.getElementById('test'))
-    </script>
-  </body>
-</html>
